--- a/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
+++ b/packages/core/src/plugins/codeBlockButtonsAssets/codeBlockButtons.css
@@ -2,6 +2,7 @@
 pre:has(.function-btn-container) {
     position: relative;
     display: flex;
+    overflow: visible;
 }
 
 button.function-btn {
@@ -34,8 +35,11 @@ pre:hover > .function-btn-container > button.function-btn {
 }
 
 .function-btn-body {
-    align-items: center;
+    width: 100%;
+    height: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .function-btn svg {
@@ -47,4 +51,33 @@ code.wrap {
     white-space: pre-wrap;
     word-wrap: break-word;
     word-break: break-all;
+}
+
+.tooltip-container {
+    top: 0;
+    right: 0;
+}
+
+.tooltiptext {
+    visibility: hidden;
+    width: fit-content;
+    bottom: 120%;
+    right: 0;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 5px 5px 5px;
+    border-radius: 6px;
+    font-size: 12px;
+    cursor: default;
+    position: absolute;
+}
+
+.function-btn:hover .tooltiptext {
+    visibility: visible;
+    overflow: visible;
+}
+
+.function-btn-container {
+    width: 0;
 }
